clusters/onprem-dev/harbor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  namespace: harbor
spec:
  parentRefs:
  - group: gateway.networking.k8s.io	
    kind: Gateway	
    name: public-gateway
    namespace: gateway
  hostnames:
  - harbor.yongun.shop
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: harbor
          port: 80
          weight: 1
      matches:	
        - path:	
            type: PathPrefix	
            value: /
